# ribosome

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  core.html  core.html.md  gradio.html  gradio.html.md  grammar.json  index.html  index.html.md  llama_index.html  llama_index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml
_proc/: 00_core.ipynb  01.core.dom.ipynb  01.parsing.ms_office.marker.html.md  01.parsing.ms_office.marker.ipynb  01.parsing.ms_office.markitdown.html.md  01.parsing.ms_office.markitdown.ipynb  01_gradio.ipynb  03.chroma_db.ipynb  index.ipynb  nbdev.yml
_proc/_docs/: 01.core.dom.html  01.core.dom.html.md  01.parsing.ms_office.marker.html  01.parsing.ms_office.markitdown.html  03.chroma_db.html  03.chroma_db.html.md  index.html  index.html.md  robots.txt  search.json  sitemap.xml
_proc/site_libs/bootstrap/: bootstrap-9d1e7e9ec5680d3d625258fb560439e2.min.css
cell_ribosome/: _modidx.py  core.py  dom.py
devnbs/: 00_core_httpserve.ipynb  04_data_preprocessing.ipynb  06_langchain_rag.ipynb  06_langchain_rag_google.ipynb  06_langchain_rag_groq.ipynb  99_sandbox.ipynb
nbs/: .gitignore  00_core.ipynb  01.core.dom.embedding.ipynb  01.core.dom.ipynb  01.core.dom.reorg.ipynb  01.core.dom.summary.ipynb  01.core.dom.tree.ipynb  01.core.dom.utils.ipynb  01.core.domclass.ipynb  01.core.utils.ipynb  01.parsing.ms_office.ipynb  01.parsing.ms_office.marker.ipynb  01.parsing.ms_office.markitdown.ipynb  01.system.utils.ipynb  01_gradio.ipynb  02.process.semantics.ipynb  02_llama_index.ipynb  02_llama_index_mcp.ipynb  03.chroma_db.ipynb  03_chroma_db.ipynb  04.tree_sitter.ipynb  04_data_preprocessing.ipynb  05_rag.ipynb  06_langchain_rag.ipynb  06_langchain_rag_google.ipynb  06_langchain_rag_groq.ipynb  06_langchain_rag_openrouter.ipynb  07_langchain_pdf_rag.ipynb  08_local_rag_ds_r1.ipynb  index.ipynb  nbdev.yml  sidebar.yml  test_document_orig.md
res/: instruction_list.md  qa_service.txt  qa_technology.txt
res/SR024011/: SR024011.md  test.html  test.json
res/siasun_md_sample/: test.json  test.md  test.rst  test_ast.json
res/siasun_md_sample/SN024002/: SN024002《新松SN7B-7-0.90规格参数》A-1.md  SN024002《新松SN7B-7-0.90规格参数》A-1_raw.json
res/siasun_md_sample/SR02400401/: SR02400401《 SIASUN SR210A-210-2.65 Specifications-CE》A-0.md  SR02400401《 SIASUN SR210A-210-2.65 Specifications-CE》A-0_meta.json
res/siasun_md_sample/SX322002/: SX322002《新松机器人码垛应用操作手册》-V1.0.md  SX322002《新松机器人码垛应用操作手册》-V1.0_ast.json
ribosome/: _modidx.py  core.py
ribosome/parsing/ms_office/: marker.py  markitdown.py
scripts/: JOB_TEST_RESULTS.md  RC5_UPDATE_SUMMARY.md  TEST_RESULTS.md  build_parser.py  extract_instructions.py  grammar.json  grammar_to_gbnf.py  siasun_interpreter.py  siasun_robot_parsing.ipynb  test_all.sh  test_jobs.sh
scripts/rc5/Antlr4/: Job.g4  Job.interp  JobBaseListener.cs  JobLexer.cs  JobLexer.tokens  JobListener.cs  JobParser.cs
scripts/rc5/jobs/: aaa.siasun  ceshi.siasun  jisuan.txt
scripts/tests/: DUODAOHAN.siasun  LXDH.siasun  circular_arc_weld.siasun  coordinate_systems.siasun  dispensing_path.siasun  error_handling.siasun  io_synchronization.siasun  job文件.rar  loop_counter.siasun  move_x_axis_100mm_offset.siasun  move_x_axis_100mm_position.siasun  multi_point_path.siasun  palletizing_3x3.siasun  pick_and_place.siasun  spiral_path.siasun  tool_change.siasun
scripts/tests/rc5/: MIAN.txt  ROBxt.txt
scripts/tests_txt/: MLOFFSETON.txt  circular_arc_weld.txt  loop_counter.txt  move_x_axis_100mm_offset.txt  move_x_axis_100mm_position.txt  multi_point_path.txt  pick_and_place.txt  tool_change.txt
scripts/tree-sitter-siasun/: Antlr4.rar  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar_old.js  package.json  pyproject.toml  setup.py  siasun_robot.gbnf  siasun_robot_old.gbnf  siasun_robot_simple.gbnf  test.siasun  test.txt  test_arith.siasun  test_arith.txt  test_comments.siasun  test_comprehensive.siasun  tree-sitter-siasun_robot.wasm  tree-sitter.json
scripts/tree-sitter-siasun/antlr4-rc5/: Job.g4  JobBaseListener.cs  JobLexer.cs  JobLexer.interp  JobLexer.tokens  (+2 more)
tests/: debug_cell.py  debug_cell_13.py  print_cell_13.py  run_ipynb.py  test_dom_behavior.py  test_embedding_fastcore.py  validate_nb.py  validation_script.py  validation_script_v2.py  validation_script_v3.py  validation_script_v4.py  validator.py
(+16 files in other folders)
